# leptos-routable

./: .gitignore  Cargo.toml  README.md  USING_STATE_SUPPORT.md  flake.nix
crates/leptos-routable/: Cargo.toml
crates/leptos-routable-macro/: Cargo.toml
crates/leptos-routable-macro/src/: derive_routable.bak.rs  derive_routable.rs  derive_to_href.rs  lib.rs  route_component.rs  to_href_display.rs  utils.rs
crates/leptos-routable/src/: lib.rs
examples/basic/: Cargo.toml
examples/basic-flat-router/: Cargo.toml
examples/basic-flat-router/public/: tailwind.css
examples/basic-flat-router/src/: lib.rs  main.rs
examples/basic-nested-router/: Cargo.toml
examples/basic-nested-router/src/: admin.rs  dashboard.rs  lib.rs  main.rs
examples/basic/public/: styles.css
examples/basic/src/: lib.rs
examples/distributed-state/: Cargo.toml
examples/distributed-state/src/: lib.rs  main.rs
examples/distributed-state/src/routes/: mod.rs  state.rs  types.rs
examples/distributed-state/src/routes/dashboard/: layout.rs  mod.rs  state.rs  styles.rs  types.rs
examples/distributed-state/src/routes/dashboard/sub_routes/: mod.rs  state.rs  types.rs
examples/distributed-state/src/routes/dashboard/sub_routes/settings/: state.rs  styles.rs  types.rs  view.rs
examples/distributed-state/src/routes/index/: mod.rs  styles.rs  types.rs  view.rs
examples/distributed-state/src/routes/not_found/: mod.rs  state.rs  styles.rs  types.rs  view.rs
examples/state-support/: Cargo.toml
examples/state-support/src/: lib.rs  main.rs
examples/sub-state-pattern/: Cargo.toml
src/: combine_paths.rs  hook_extensions.rs  lib.rs  maybe_param.rs
test-fromstr-macro/: Cargo.toml
test-fromstr-macro/src/: lib.rs
