[workspace]
members = [
    "crates/leptos-routable-macro",
    "crates/leptos-routable",
    "examples/basic-flat-router",
    "examples/basic-nested-router",
    "examples/state-support",
    "examples/distributed-state",
    "test-fromstr-macro"
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
description = "Type-safe routing utility for Leptos with zero-string path generation"

[workspace.dependencies]
leptos-routable = { path = "./crates/leptos-routable" }
leptos = "0.8"
leptos_router = "0.8"
leptos_meta = "0.8"
thiserror = "2.0.11"
leptos-routable-macro = { path = "./crates/leptos-routable-macro" }
