[package]
name = "basic-flat-router"
version = "0.1.0"
edition = "2021"
authors = ["geoffreygarrett <geoffrey@apollo.xyz>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { workspace = true, features = ["csr", "nightly"] }
leptos_meta.workspace = true
leptos_router = { workspace = true, features = ["nightly"] }
leptos-routable.workspace = true
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
uuid = { version = "1.11.1", features = ["v4", "js"] }

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }
