[package]
name = "state-support-example"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
leptos = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos-routable = { path = "../../crates/leptos-routable" }
reactive_stores = "0.2"
console_error_panic_hook = "0.1"